package nss.capstone.utils;

public enum SystemOfMeasurement {

    METRIC,
    IMPERIAL;

}
